--- a/test.yaml
+++ b/test.yaml
@@ -69,7 +69,12 @@ proxies:
 # clash 额外支持 chacha20 rc4-md5 xchacha20-ietf-poly1305 加密方式
 
 #  http
-  - name: 🎵 解锁节点
+  - name: 🎵 解锁节点(Android/PC)
+    type: http
+    server: 82.156.188.212
+    port: 8180
+    
+  - name: 🎵 解锁节点(Android/PC)
     type: http
     server: 82.156.188.212
     port: 8180
