--- a/test.yaml
+++ b/test.yaml
@@ -74,13 +74,9 @@ proxies:
     server: 82.156.188.212
     port: 8180
     
-proxy-groups:
-  - name: UnblockNeteaseMusic
-    type: select
-    proxies: 
-      - 🎵 解锁节点
+
       
-        - name: 🎵 解锁节点(Android/PC)2
+  - name: 🎵 解锁节点(Android/PC)2
     type: http
     server: 34.92.228.82
     port: 80
@@ -89,7 +85,8 @@ proxy-groups:
   - name: UnblockNeteaseMusic
     type: select
     proxies: 
-      - 🎵 解锁节点
+      - 🎵 解锁节点(Android/PC)1
+      - 🎵 解锁节点(Android/PC)2
 
 rules:
 # 自定义规则
