--- a/test.yaml
+++ b/test.yaml
@@ -69,18 +69,17 @@ proxies:
 # clash 额外支持 chacha20 rc4-md5 xchacha20-ietf-poly1305 加密方式
 
 #  http
-  - {name: 🎵 解锁节点(Android/PC)1
-    type: http
-    server: 82.156.188.212
-    port: 8180
-    }
+  - {name: 🎵 解锁节点(Android/PC)1，type: http，server: 82.156.188.212，port: 8180}
+   
+    
+    
 
       
-  - {name: 🎵 解锁节点(Android/PC)2
-    type: http
-    server: 34.92.228.82
-    port: 80
-    }
+  - {name: 🎵 解锁节点(Android/PC)2，type: http，server: 34.92.228.82，port: 80}
+    
+    
+    
+  
     
     proxy-groups:
   - name: UnblockNeteaseMusic
